make SpringBootTests work and add HeadlineRepository